--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    //Why
+    implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -42,6 +44,12 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
 
     implementation "com.github.akarnokd:rxjava2-interop:0.13.2"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
+
+    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
+    implementation 'com.android.support:support-fragment:28.0.0'
 }
 
 
