--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,12 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+
+    //implementation 'com.android.support:cardview-v7:28.0.0'
+    //implementation 'com.google.android.material:material:1.0.0-beta01'
 }
 
 
