--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,21 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     //Why
-    implementation 'com.android.support:support-media-compat:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //implementation 'com.android.support:support-media-compat:28.0.0'
+    implementation 'androidx.media:media:1.0.0'
+    //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
     // Adding mine
-    implementation      "com.google.auto.value:auto-value-annotations:1.6.2"
+    implementation "com.google.auto.value:auto-value-annotations:1.6.2"
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -44,12 +50,14 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
 
     implementation "com.github.akarnokd:rxjava2-interop:0.13.2"
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
 
     implementation 'com.jakewharton:butterknife:9.0.0-rc1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
-    implementation 'com.android.support:support-fragment:28.0.0'
+    //implementation 'com.android.support:support-fragment:28.0.0'
+    implementation 'androidx.fragment:fragment:1.0.0'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -66,11 +74,16 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
 
-    //implementation 'com.android.support:cardview-v7:28.0.0'
+
     //implementation 'com.google.android.material:material:1.0.0-beta01'
+    //implementation 'com.google.android.material:material:1.0.0-rc01'
+    //implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    //implementation 'com.android.support:design:28.0.0-alpha3'
+    implementation 'blue.aodev:material-values:1.1.1'
 }
 
 
