--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,10 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     //implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'blue.aodev:material-values:1.1.1'
+
+    implementation 'com.gabrielittner.sqlite:support-db-requery:0.2.0'
+    //implementation 'androidx.sqlite:sqlite:2.0.0-rc01'
+    implementation 'androidx.sqlite.db.SupportSQLiteOpenHelper'
 }
 
 
