--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,9 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.bohan.android.bakingapp"
-        minSdkVersion 20
+        minSdkVersion 28
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,13 +27,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.android.material:material:1.0.0-rc01'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
     //Why
     //implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'androidx.media:media:1.0.0'
     //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
@@ -44,14 +47,15 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
-    implementation 'com.squareup.sqlbrite3:sqlbrite:3.2.0'
+    implementation 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
 
     implementation 'com.google.dagger:dagger:2.17'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
 
     implementation "com.github.akarnokd:rxjava2-interop:0.13.2"
-    //implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+
+    //implementation 'androidx.recyclerview.widget.RecyclerView'
     implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
 
     implementation 'com.jakewharton:butterknife:9.0.0-rc1'
@@ -85,9 +89,13 @@ dependencies {
     //implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'blue.aodev:material-values:1.1.1'
 
-    implementation 'com.gabrielittner.sqlite:support-db-requery:0.2.0'
-    //implementation 'androidx.sqlite:sqlite:2.0.0-rc01'
+    implementation 'android.arch.persistence:db:1.1.1'
+    annotationProcessor 'android.arch.persistence:db:1.1.1'
+    //implementation 'io.requery:sqlite-android:3.21.0'
+    //implementation 'androidx.sqlite:sqlite:2.0.0'
     //implementation 'androidx.sqlite.db.SupportSQLiteOpenHelper'
+
+    //implementation 'androidx.appcompat.widget.AppCompatRadioButton'
 }
 
 
