--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     //implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'blue.aodev:material-values:1.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 
     implementation 'android.arch.persistence:db:1.1.1'
     annotationProcessor 'android.arch.persistence:db:1.1.1'
