--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     //implementation 'androidx.sqlite.db.SupportSQLiteOpenHelper'
 
     //implementation 'androidx.appcompat.widget.AppCompatRadioButton'
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
 
 
