--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,8 +98,10 @@ dependencies {
 
     //implementation 'androidx.appcompat.widget.AppCompatRadioButton'
 
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:3.8.0'
+    //implementation 'androidx.constraintlayout.widget.ConstraintLayout'
+
 }
 
 
