--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".BakingApp"
+        android:name=".MVP.BakingApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -38,7 +38,7 @@
                 android:value=".MVP.Recipes.RecipeDetails.RecipeDetailsActivity"/>
         </activity>
 
-        <receiver android:name=".widget.WidgetProvider">
+        <receiver android:name=".MVP.widget.WidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
             </intent-filter>
@@ -48,7 +48,7 @@
                 android:resource="@xml/widget_ingredients"/>
         </receiver>
 
-        <activity android:name=".widget.WidgetConfigActivity">
+        <activity android:name=".MVP.widget.WidgetConfigActivity">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
             </intent-filter>
