--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        release {
+        release {buildToolsVersion
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -28,8 +28,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //implementation 'com.android.support:appcompat-v7:28.0.0'
     //implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.android.material:material:1.0.0-rc01'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    //implementation 'com.android.support:design:26.1.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
     //Why
     //implementation 'com.android.support:support-media-compat:28.0.0'
@@ -38,9 +38,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+    implementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
     // Adding mine
     implementation "com.google.auto.value:auto-value-annotations:1.6.2"
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
@@ -88,7 +88,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     //implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'blue.aodev:material-values:1.1.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'android.arch.persistence:db:1.1.1'
     annotationProcessor 'android.arch.persistence:db:1.1.1'
