--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         multiDexEnabled true
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {buildToolsVersion
@@ -26,82 +26,72 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //implementation 'com.android.support:appcompat-v7:28.0.0'
-    //implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.android.material:material:1.0.0'
-    //implementation 'com.android.support:design:26.1.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    //Why
-    //implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'androidx.media:media:1.0.0'
-    //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
-    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
-    // Adding mine
+    implementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation "com.google.auto.value:auto-value-annotations:1.6.2"
     annotationProcessor "com.google.auto.value:auto-value:1.6.2"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
-
     implementation 'com.google.dagger:dagger:2.17'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
-
     implementation "com.github.akarnokd:rxjava2-interop:0.13.2"
-
-
-    //implementation 'androidx.recyclerview.widget.RecyclerView'
     implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
-
     implementation 'com.jakewharton:butterknife:9.0.0-rc1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
-    //implementation 'com.android.support:support-fragment:28.0.0'
     implementation 'androidx.fragment:fragment:1.0.0'
-
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.2'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.2'
-
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-
     annotationProcessor 'com.ryanharter.auto.value:auto-value-gson:0.8.0'
     implementation 'com.ryanharter.auto.value:auto-value-gson-annotations:0.8.0'
-
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
-    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    //implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
-
-
-    //implementation 'com.google.android.material:material:1.0.0-beta01'
-    //implementation 'com.google.android.material:material:1.0.0-rc01'
-    //implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    //implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'blue.aodev:material-values:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
     implementation 'android.arch.persistence:db:1.1.1'
     annotationProcessor 'android.arch.persistence:db:1.1.1'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.0.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0';
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+
+    /*
+    //implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:3.8.0'
+    //implementation 'androidx.constraintlayout.widget.ConstraintLayout'
     //implementation 'io.requery:sqlite-android:3.21.0'
     //implementation 'androidx.sqlite:sqlite:2.0.0'
     //implementation 'androidx.sqlite.db.SupportSQLiteOpenHelper'
-
     //implementation 'androidx.appcompat.widget.AppCompatRadioButton'
-
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
-    //annotationProcessor 'com.github.bumptech.glide:compiler:3.8.0'
-    //implementation 'androidx.constraintlayout.widget.ConstraintLayout'
-
+    //implementation 'com.android.support:design:28.0.0-alpha3'
+    //implementation 'com.google.android.material:material:1.0.0-beta01'
+    //implementation 'com.google.android.material:material:1.0.0-rc01'
+    //implementation 'com.android.support:cardview-v7:28.0.0'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
+    //implementation 'com.android.support:support-fragment:28.0.0'
+    //implementation 'androidx.recyclerview.widget.RecyclerView'
+    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    //androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //implementation 'com.android.support:support-media-compat:28.0.0'
+    //implementation 'com.android.support:design:26.1.0'
+    */
 }
 
 
